# market-qt

./: README.md
market-qt/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
market-qt/src/: button.cpp  main.cpp
src/: calculator.cpp
